Fix header height on ios

--- a/src/components/sections/Header.module.scss
+++ b/src/components/sections/Header.module.scss
@@ -3,7 +3,7 @@ $rfs-factor: 20;
 
 .headerContainer {
   height: 100vh;
-  min-height: -webkit-fill-available;
+  max-height: -webkit-fill-available;
   margin-bottom: 100px;
   display: flex;
   align-items: center;
